# finterion-python-client

./: README.md  __init__.py  main.py  pyproject.toml  setup.py  version.py
.github/workflows/: build.yml  publish.yml  test.yml
eltyer/: __init__.py  exceptions.py
eltyer/configuration/: config.py  constants.py
eltyer/models/: __init__.py  model.py  order.py  order_side.py  order_status.py  order_type.py  portfolio.py  position.py  positions.py
eltyer/utils/: version.py
finterion/: __init__.py  finterion.py  services.py
finterion/configuration/: constants.py  urls.py
finterion/models/: __init__.py  algorithm.py  algorithm_profile.py  order.py  order_type.py  portfolio.py  position.py
tests/: test_client.py  test_config.py
tests/models/: test_order.py  test_position.py
