[tool.poetry]
name = "finterion-python-client"
version = "0.7.6"
description = "Official python client for Finterion"
authors = ["marcvanduyn <marc@finterion.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests= "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
