[tool.poetry]
name = "finterion"
version = "v0.8.9"
description = "Official python client for Finterion"
authors = ["marcvanduyn <marc@finterion.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests= "^2.26.0"

[tool.poetry.group.test.dependencies]
coverage= "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
